--- a/firstsimplewebsite.html
+++ b/firstsimplewebsite.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>This is my first Simple Website</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus eligendi placeat illum adipisci illo, neque assumenda deserunt velit corrupti aliquid nesciunt earum? Possimus alias optio, obcaecati esse asperiores quas magnam.</p>
+    <h1>This is my first Simple Website</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus eligendi placeat illum adipisci illo, neque assumenda deserunt velit corrupti aliquid nesciunt earum? Possimus alias optio, obcaecati esse asperiores quas magnam.</p>
 </body>
 </html>
